src/css/custom.css
/* ... */
.contact {
  background-color: var(--ifm-color-primary-p1);
  color: var(--ifm-color-text-on-primary-p1);
  font-size: 14px;
  border-radius: 4px;
  font-weight: bolder;
  font-style: normal;
  margin: var(--ifm-navbar-item-padding-vertical) 4px;
  padding: 8px;
}

.contact:hover {
  background-color: white;
}

.fundable_projects {
  background-color: var(--ifm-color-secondary-s1);
  font-size: 14px;
  color: black;
  border-radius: 4px;
  font-weight: bolder;
  font-style: normal;
  margin: var(--ifm-navbar-item-padding-vertical) 4px;
  padding: 8px;
}

.fundable_projects:hover {
  background-color: var(--ifm-color-primary-p0);
}


.custom_navbar_item {
  font-family: var(--ifm-font-family-roboto);
  width: 117px;
  height: 36px;
  padding: 6px 14px;
  text-align: center;
}

.custom_navbar_item:hover {
  background-color: var(--ifm-color-primary-p1);
  justify-items: center;
  border-radius: 4px;
}

.navbar__link:hover {
  color: black;
}

.astronaut-footer {
  background: url(@site/static/img/quantstack/astronaut-footer.svg);
  content: "";
  display: flex;
  height: 240px;
  width: 240px;
  background-repeat: no-repeat;
}

.rss-circle-icon:hover {
  opacity: 0.6;
}

.rss-circle-icon:before {
  background: url(@site/static/img/socialmedias/RSS.svg);
  content: "";
  display: flex;
  height: 32px;
  width: 32px;
  background-repeat: no-repeat;
}

.github-icon:hover {
  opacity: 0.6;
}

.github-icon:before {
  background: url(@site/static/img/socialmedias/GH.svg);
  content: "";
  display: flex;
  height: 32px;
  width: 32px;
  background-repeat: no-repeat;
}

.linkedin-icon:hover {
  opacity: 0.6;
}

.linkedin-icon:before {
  background: url(@site/static/img/socialmedias/LinkedIn.svg);
  content: "";
  display: flex;
  height: 32px;
  width: 32px;
  background-repeat: no-repeat;
}

.bluesky-icon:hover {
  opacity: 0.6;
}

.bluesky-icon:before {
  background: url(@site/static/img/socialmedias/Bluesky.svg);
  content: "";
  display: flex;
  height: 32px;
  width: 32px;
  background-repeat: no-repeat;
}

.mastodon-icon:hover {
  opacity: 0.6;
}

.mastodon-icon:before {
  background: url(@site/static/img/socialmedias/Mastodon.svg);
  content: "";
  display: flex;
  height: 32px;
  width: 32px;
  background-repeat: no-repeat;
}

.close-button {
  background: url(@site/static/img/icons/CloseButton.svg);
  content: "";
  display: flex;
  height: 36px;
  width: 36px;
  background-repeat: no-repeat;
  border: 0px solid;
}

.cards-list {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

ul.row {
  margin: 0;
  padding: 0;
}

.projects-list {
  list-style-type: none;
  padding: none;
  margin-left: 0;
  width: 100%;
}

.row {
  display: flex;
  flex-wrap: wrap;
  margin: 0 0;
}

.items-list {
  list-style-type: none;
}

.custom-progress-bar::-webkit-progress-value {
  background-color: var(--ifm-color-primary-p1);
}

.custom-progress-bar::-webkit-progress-bar {
  background-color: #eee;
}

.cards-row {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: var(--ifm-spacing-xl);
  list-style: none;
  padding: 0;
  margin: var(--ifm-spacing-2xl) 0;
}

.cards-row > li {
  display: flex;
}

.content-card {
  border-radius: 8px;
  box-shadow: var(--ifm-shadow-card);
  background-color: var(--ifm-color-primary-p0);
  height: 100%;
  box-sizing: border-box;
}

.page-content {
  max-width: var(--ifm-content-width);
  width: 100%;
  margin: 0 auto;
  padding: 0 var(--ifm-spacing-2xl);
}

.page-content-narrow {
  max-width: 720px;
  width: 100%;
  margin: 0 auto;
  padding: 0 var(--ifm-spacing-lg);
}

@media (max-width: 996px) {
  .page-content {
    padding: 0 var(--ifm-spacing-lg);
  }
}

